--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "guzzle/guzzle": "~3.0"
+        "guzzlehttp/guzzle": "~3.0"
     },
     "autoload": {
         "psr-4": {
